--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"guzzle/guzzle": "~3.9",
+		"guzzlehttp/guzzle": "^6.3"
 	},
 	"autoload": {
 		"classmap": [
